--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.20.2",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.23"
   }
 }
